logs/errors.log
2026-02-03 21:26:06 | ERROR | models.auto_learner:find_top_gainers:154 - find_top_gainers error: HTTPSConnectionPool(host='82.push2.eastmoney.com', port=443): Read timed out. (read timeout=15)

2026-02-03 21:26:58 | ERROR | models.auto_learner:find_top_losers:182 - find_top_losers error: HTTPSConnectionPool(host='82.push2.eastmoney.com', port=443): Read timed out. (read timeout=15)

2026-02-03 21:27:23 | ERROR | models.auto_learner:find_top_volume:211 - find_top_volume error: ('Connection aborted.', RemoteDisconnected('Remote end closed connection without response'))

2026-02-03 21:27:59 | ERROR | models.auto_learner:find_top_gainers:154 - find_top_gainers error: ('Connection aborted.', RemoteDisconnected('Remote end closed connection without response'))

2026-02-03 21:28:06 | ERROR | models.auto_learner:find_top_losers:182 - find_top_losers error: ('Connection aborted.', RemoteDisconnected('Remote end closed connection without response'))

2026-02-03 21:28:11 | ERROR | models.auto_learner:find_top_volume:211 - find_top_volume error: ('Connection aborted.', RemoteDisconnected('Remote end closed connection without response'))

2026-02-04 01:22:21 | ERROR | models.auto_learner:find_top_gainers:154 - find_top_gainers error: ('Connection aborted.', RemoteDisconnected('Remote end closed connection without response'))

2026-02-04 01:22:27 | ERROR | models.auto_learner:find_top_losers:182 - find_top_losers error: ('Connection aborted.', RemoteDisconnected('Remote end closed connection without response'))

2026-02-04 01:22:33 | ERROR | models.auto_learner:find_top_volume:211 - find_top_volume error: ('Connection aborted.', RemoteDisconnected('Remote end closed connection without response'))

2026-02-04 01:24:37 | ERROR | models.auto_learner:find_top_gainers:154 - find_top_gainers error: HTTPSConnectionPool(host='82.push2.eastmoney.com', port=443): Read timed out. (read timeout=15)

2026-02-04 01:51:30 | ERROR | data.fetcher:wrapper:63 - get_history failed after 3 attempts: ('Connection aborted.', ConnectionResetError(10054, 'An existing connection was forcibly closed by the remote host', None, 10054, None))

2026-02-04 01:58:24 | ERROR | data.fetcher:wrapper:63 - get_history failed after 3 attempts: ('Connection aborted.', ConnectionResetError(10054, 'An existing connection was forcibly closed by the remote host', None, 10054, None))

2026-02-04 02:03:54 | ERROR | models.auto_learner:find_top_gainers:215 - find_top_gainers error: HTTPSConnectionPool(host='82.push2.eastmoney.com', port=443): Read timed out. (read timeout=15)

2026-02-04 02:04:47 | ERROR | models.auto_learner:find_top_losers:249 - find_top_losers error: HTTPSConnectionPool(host='82.push2.eastmoney.com', port=443): Read timed out. (read timeout=15)

2026-02-04 02:05:40 | ERROR | models.auto_learner:find_top_volume:284 - find_top_volume error: HTTPSConnectionPool(host='82.push2.eastmoney.com', port=443): Read timed out. (read timeout=15)

2026-02-04 02:17:07 | ERROR | models.auto_learner:find_top_gainers:215 - find_top_gainers error: ('Connection aborted.', RemoteDisconnected('Remote end closed connection without response'))

2026-02-04 02:17:13 | ERROR | models.auto_learner:find_top_losers:249 - find_top_losers error: ('Connection aborted.', RemoteDisconnected('Remote end closed connection without response'))

2026-02-04 02:17:20 | ERROR | models.auto_learner:find_top_volume:284 - find_top_volume error: ('Connection aborted.', RemoteDisconnected('Remote end closed connection without response'))

2026-02-04 16:21:38,051 | [31mERROR   [0m | data.fetcher:_fetch_from_sources:464
All sources failed for 300059

2026-02-04 16:22:04,991 | [31mERROR   [0m | data.fetcher:_fetch_from_sources:464
All sources failed for 603288

2026-02-04 16:22:12,194 | [31mERROR   [0m | data.fetcher:_fetch_from_sources:464
All sources failed for 600276

2026-02-04 16:22:19,281 | [31mERROR   [0m | data.fetcher:_fetch_from_sources:464
All sources failed for 300760

2026-02-04 16:22:26,381 | [31mERROR   [0m | data.fetcher:_fetch_from_sources:464
All sources failed for 300015

2026-02-04 16:22:33,509 | [31mERROR   [0m | data.fetcher:_fetch_from_sources:464
All sources failed for 601166

2026-02-04 16:22:40,644 | [31mERROR   [0m | data.fetcher:_fetch_from_sources:464
All sources failed for 601398

2026-02-04 16:22:47,764 | [31mERROR   [0m | data.fetcher:_fetch_from_sources:464
All sources failed for 600030

2026-02-05 06:07:51,379 | ERROR | trading:main:115
Error: invalid syntax (discovery.py, line 94)
Traceback (most recent call last):
  File "F:\Trading app\Trading-graph\main.py", line 109, in main
    from ui.app import run_app
  File "F:\Trading app\Trading-graph\ui\__init__.py", line 2, in <module>
    from .app import MainApp, run_app
  File "F:\Trading app\Trading-graph\ui\app.py", line 23, in <module>
    from models.predictor import Predictor, Prediction, Signal
  File "F:\Trading app\Trading-graph\models\__init__.py", line 20, in <module>
    from .trainer import Trainer
  File "F:\Trading app\Trading-graph\models\trainer.py", line 18, in <module>
    from data.fetcher import DataFetcher
  File "F:\Trading app\Trading-graph\data\__init__.py", line 9, in <module>
    from .discovery import UniversalStockDiscovery, DiscoveredStock
  File "F:\Trading app\Trading-graph\data\discovery.py", line 94
    def discover_all(...):
                     ^^^
SyntaxError: invalid syntax
2026-02-05 06:11:44,976 | ERROR | trading:main:115
Error: ContinuousLearner.run() got an unexpected keyword argument 'epochs'
Traceback (most recent call last):
  File "F:\Trading app\Trading-graph\main.py", line 86, in main
    learner.run(
TypeError: ContinuousLearner.run() got an unexpected keyword argument 'epochs'
